--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="top-formulario row center-xs text-center">
   <div class="col-xs-4 col-md-4 col-md-offset-4">
-<h2>Editar <%= resource_name.to_s.humanize %></h2>
+<h2>Editar usuario</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
