--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Product</h1>
+<div class="top-formulario row center-xs text-center">
+  <div class="col-xs-6 col-md-6 col-md-offset-3">
+<h1>Editar Producto</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<%= link_to 'Mostrar', @product %> |
+<%= link_to 'Volver', products_path %>
+</div>
+</div>
