--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,8 +2,9 @@
   <div class="col-xs-4 col-md-4 col-md-offset-4">
 <h2>Registrarse</h2>
 
+  <%= image_tag "/mainimages/logo.png"%>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+
 
   <div class="field">
     <%= f.label :email %><br />
