--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -19,6 +19,9 @@
     <%= f.label :descripcion %><br>
     <%= f.text_area :descripcion, style:"height:130px;" %>
   </div>
+<div class="field">
+   <%= f.collection_select :category_id, Category.all, :id, :nombre, { prompt: "Elije una categoria" }, class: "browser-default" %>  
+    </div>
    <div class="field">
     <%= f.label :cover %>
     <%= f.file_field :cover, style:"margin-left:43%;" %>
